--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -12,8 +12,9 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build & Tests
+    - name: "⬇️ Checkout"
+      uses: actions/checkout@v2
+    - name: "🧪 Build & Tests"
       run: xcodebuild test -scheme SwiftDown -destination platform="macOS" -enableCodeCoverage YES
-    - name: Upload coverage to Codecov
+    - name: "📊 Upload coverage to Codecov"
       uses: codecov/codecov-action@v1.3.1
